--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 -->
 <html>
 	<head>
-		<title>Twenty by HTML5 UP</title>
+		<title>Frances and Foxtail</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="assets/css/pre.css" />
-		
-		<!-- uses google-code-prettify for syntax highlighting 
+
+		<!-- uses google-code-prettify for syntax highlighting
 			 see https://github.com/google/code-prettify for more info -->
 		<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js">
 		</script>
@@ -22,7 +22,7 @@
 		<div id="page-wrapper">
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">Frances and Foxtail<span></span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Welcome</a></li>
@@ -52,7 +52,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-			
+
 					<!--
 						".inner" is set up as an inline-block so it automatically expands
 						in both directions to fit whatever's inside it. This means it won't
@@ -60,46 +60,45 @@
 						appropriate (<br />).
 					-->
 					<div class="inner">
-			
+
 						<header>
-							<h2>TWENTY</h2>
+							<h2>Frances and Foxtail</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p>We are<strong> Frances and Foxtail</strong>
 						<br />
-						responsive template
+						Commission your artwork today
 						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						<a href="http://html5up.net"></a></p>
 						<footer>
 							<ul class="buttons stacked">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
 							</ul>
 						</footer>
-			
+
 					</div>
-			
+
 				</section>
-			
+
 			<!-- Main -->
 				<article id="main">
-			
+
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2>About the Artist <strong></strong>
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+						</h2>
+						<p><strong></strong> Anna Heneker grew up in a very creative family in West Wales. Daughter to wildlife and botanical artist, Joanna Heneker, Anna spent much of her youth tagging along with her mother to galleries, exhibitions and art markets as well as exploring the Welsh countryside for wildflowers for her mother to paint. It was a natural gravitation to an education in the arts, where she developed her skills at Carmarthenshire College. In foundation art and design, she learned to explore all varieties of art media, especially taking an interest in 3D, sculpture and textiles. Anna then studied Costume for the Screen and Stage at The Arts Institute at Bournemouth University. After studying she set her sights on travel, which brought her to the Sunshine Coast where she lives today. Inspired by nature and the surrounding forests which feel so much like a home away from home, she has returned to her roots of watercolour painting, from which her mother taught her.
 						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
+
 						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						 <a href="http://html5up.net/license"></a></p>
 					</header>
-			
+
 					<!-- One -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
 								<div class="col-8 col-12-narrower">
-			
+
 									<header>
 										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
 									</header>
@@ -109,10 +108,10 @@
 											<li><a href="#" class="button">Find Out More</a></li>
 										</ul>
 									</footer>
-			
+
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-			
+
 									<ul class="featured-icons">
 										<li><span class="icon fa-clock"><span class="label">Feature 1</span></span></li>
 										<li><span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span></li>
@@ -121,16 +120,16 @@
 										<li><span class="icon solid fa-lock"><span class="label">Feature 5</span></span></li>
 										<li><span class="icon solid fa-cog"><span class="label">Feature 6</span></span></li>
 									</ul>
-			
+
 								</div>
 							</div>
 						</section>
-			
+
 					<!-- Two -->
 						<section class="wrapper style1 container special">
 							<div class="row">
 								<div class="col-4 col-12-narrower">
-			
+
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
@@ -138,10 +137,10 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 									</section>
-			
+
 								</div>
 								<div class="col-4 col-12-narrower">
-			
+
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
@@ -149,10 +148,10 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 									</section>
-			
+
 								</div>
 								<div class="col-4 col-12-narrower">
-			
+
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
@@ -160,21 +159,21 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 									</section>
-			
+
 								</div>
 							</div>
 						</section>
-			
+
 					<!-- Three -->
 						<section class="wrapper style3 container special">
-			
+
 							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
+								<h2>Latest artwork <strong></strong></h2>
 							</header>
-			
+
 							<div class="row">
 								<div class="col-6 col-12-narrower">
-			
+
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
@@ -182,58 +181,58 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
-			
+
 								</div>
 								<div class="col-6 col-12-narrower">
-			
+
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>An Airport Terminal</h3>
+											<h3>Manta Ray</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p></p>
 									</section>
-			
+
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-6 col-12-narrower">
-			
+
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Hyperspace Travel</h3>
+											<h3>Paperbark Tree</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p></p>
 									</section>
-			
+
 								</div>
 								<div class="col-6 col-12-narrower">
-			
+
 									<section>
 										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>And Another Train</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p></p>
 									</section>
-			
+
 								</div>
 							</div>
-			
+
 							<footer class="major">
 								<ul class="buttons">
 									<li><a href="#" class="button">See More</a></li>
 								</ul>
 							</footer>
-			
+
 						</section>
-			
+
 				</article>
-			
+
 			<!-- CTA -->
 				<section id="cta">
-			
+
 					<header>
 						<h2>Ready to do <strong>something</strong>?</h2>
 						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
@@ -244,12 +243,12 @@
 							<li><a href="#" class="button">LOL Wut</a></li>
 						</ul>
 					</footer>
-			
+
 				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
-			
+
 					<ul class="icons">
 						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -257,13 +256,13 @@
 						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
-			
+
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Site Manager: <a href="https://nift.cc">Nift</a></li>
 					</ul>
-			
+
 				</footer>
-			
+
 		</div>
 
 		<!-- Scripts -->
